--- a/style.css
+++ b/style.css
@@ -32,6 +32,12 @@ body {
   border-top-right-radius: 127px;
   border-top-left-radius: 127px;
 }
+input:focus{
+  outline: none;
+  text-shadow: 0px 0.075px 1.2px  rgb(58, 58, 58);
+
+
+}
 .div2 p {
   font-size: 50px;
 }
