--- a/style.css
+++ b/style.css
@@ -149,3 +149,31 @@ font-size: 37px;
 font-size: 37px;
 line-height: 10px;
 }
+@media(max-width:1280px){
+  .div1{width: 100%;}
+}
+
+@media(max-width:768px){
+  .div1{width: 95%;}
+  
+  #header{
+    padding: 20px;
+    gap: 10px;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  #header h2{margin: 10px 0;}
+
+  .user_input{width: 100%;}
+
+  #to_do_list{width: 100%;}
+}
+
+@media(max-width:480px){
+  .user_input input{width: 74%;}
+}
+
+@media(max-width:320px){
+  .user_input input{width: 60%;}
+}
